--- a/Préparation/PrepE1/PrepE1.tex
+++ b/Préparation/PrepE1/PrepE1.tex
@@ -42,6 +42,18 @@
 \section{Questions préparatoires}
 
 \begin{question}
+Soit $w$ la transformation affine correspondant à la rotation de $\pi/4$ en sens horaire, suivie de la réflexion selon l'axe des $x$. Exprimez $w$ sous la forme $A\vec{x}+\vec{v}$, où $A$ est une matrice et $\vec{v}$ un vecteur.
+\end{question}
+\begin{question}
+Soit les ensembles $A$ et $B$ suivants:
+\begin{align*}
+A&=\{(x,y)\in\R^2:-1\leq x\leq 1\textrm{~et~}-1\leq y\leq 1\},\\
+B&=\{(x,y)\in\R^2:(x-1)^2+(y-1)^2\leq 1\}.
+\end{align*}
+ Calculez $d_H(A,B)$.
+\end{question} 
+
+\begin{question}
 On considère $C_0$, l’ensemble des couples $(x, y)$ du plan où $y = 0$ et $0 \leq x \leq 1$ qu’on appelle « courbe à l’étape 0 ». À l’étape 1, on enlève le tiers central du segment, pour le remplacer par 3 segments de longueur $\frac{1}{3}$ correspondant à trois côtés d’un carré, de telle sorte qu’on obtienne la figure à l’étape 1 ci-dessous, courbe que nous nommons $C_1$. On répète ce processus.
 \begin{center}
 	\includegraphics[scale=.5]{courbes.png}
@@ -65,18 +77,17 @@ On considère l’espace métrique formé de l'ensemble $\mathbb{R}^3$ muni de l
     Est-ce que la suite $(P_n)$ est convergente ? Si c’est le cas, déterminer sa limite.
 \end{parts}
 \end{question}
-\newpage
-\begin{question}
-Dans le problème suivant, on se considère dans le plan muni de la distance euclidienne habituelle. Soit $E = \{(x, y) \in \mathbb{R}^2 : 0 \leq x \leq 1, 0 \leq y < 1\}$ et la suite de points :
-\[ P_n = \left( \frac{1}{n}, 1 - \frac{1}{n^2} \right), \quad (n \geq 1). \]
+% \begin{question}
+% Dans le problème suivant, on se considère dans le plan muni de la distance euclidienne habituelle. Soit $E = \{(x, y) \in \mathbb{R}^2 : 0 \leq x \leq 1, 0 \leq y < 1\}$ et la suite de points :
+% \[ P_n = \left( \frac{1}{n}, 1 - \frac{1}{n^2} \right), \quad (n \geq 1). \]
 
-\begin{parts}
-    \part Montrez que pour $m > n$,
-    \[ d(P_n, P_m) < \sqrt{\frac{1}{n^2} + \frac{1}{n^4}}. \]
-    \part Trouvez un $N(\epsilon) > 0$ tel que $d(P_n, P_m) < \epsilon$ pour $m > n > N(\epsilon)$, et en déduire que $(P_n)$ est une suite de Cauchy.
-    \part Montrez que cette suite ne converge pas dans $(E, d_E)$.
-\end{parts}
-\end{question}
+% \begin{parts}
+%     \part Montrez que pour $m > n$,
+%     \[ d(P_n, P_m) < \sqrt{\frac{1}{n^2} + \frac{1}{n^4}}. \]
+%     \part Trouvez un $N(\epsilon) > 0$ tel que $d(P_n, P_m) < \epsilon$ pour $m > n > N(\epsilon)$, et en déduire que $(P_n)$ cd est une suite de Cauchy.
+%     \part Montrez que cette suite ne converge pas dans $(E, d_E)$.
+% \end{parts}
+% \end{question}
 
 \begin{question}
 On considère l’espace métrique $([0, \infty), d_E)$ et la fonction $f(x) = \frac{\sqrt{x}}{2}$.
@@ -86,14 +97,14 @@ On considère l’espace métrique $([0, \infty), d_E)$ et la fonction $f(x) = \
     \part Est-ce que $f$ est une contraction sur cet espace ? Justifiez.
 \end{parts}
 \end{question}
-\begin{question}
-Soit $D$ la région de $\mathbb{R}^2$ définie par
-\[ D = \{(x, y) \in \mathbb{R}^2 : 0 \leq y \leq 1 - \sqrt{2x - x^2}, 0 \leq x \leq 1 \}. \]
+% \begin{question}
+% Soit $D$ la région de $\mathbb{R}^2$ définie par
+% \[ D = \{(x, y) \in \mathbb{R}^2 : 0 \leq y \leq 1 - \sqrt{2x - x^2}, 0 \leq x \leq 1 \}. \]
 
-\begin{parts}
-    \part Donnez une représentation graphique de $D$.
-    \part Donnez une représentation graphique du $\epsilon$-voisinage de $D$ pour $\epsilon = \frac{1}{2}$.
-    \part Trouvez l’aire de ce $\epsilon$-voisinage.
-\end{parts}
-\end{question}
+% \begin{parts}
+%     \part Donnez une représentation graphique de $D$.
+%     \part Donnez une représentation graphique du $\epsilon$-voisinage de $D$ pour $\epsilon = \frac{1}{2}$.
+%     \part Trouvez l’aire de ce $\epsilon$-voisinage.
+% \end{parts}
+% \end{question}
 \end{document}
